# projet_python_2_mba_SONTSA_NZATI_SAMA_MB2DIA

./: .coverage  .flake8  .gitignore  .gitlab-ci.yml  CI-README.md  CI_README.md  Dockerfile  INDEX.md  INSTALLATION.md  LICENSE  MANIFEST.in  Makefile  PACKAGE_INFO.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  app.py  docker-compose.yml  install.bat  install.sh  pyproject.toml  requirements.txt  setup.py  tox.ini
.hypothesis/examples/55f942785263cc10/: 24acc55834a5b99e
.hypothesis/examples/9c196504bb4d503a/: d133086603c7d0e2
.hypothesis/examples/a0faea47153f29b7/: 9160c39835ba0c75
streamlit_app/: app.py
tests/: conftest.py
tests/integration/: test_routes_integration.py
tests/properties/: test_customer_properties.py  test_customer_transaction_properties.py  test_error_handling_properties.py  test_fraud_properties.py  test_health_metadata_properties.py  test_pagination_properties.py  test_search_properties.py  test_statistics_properties.py  test_transaction_properties.py  test_transaction_retrieval_properties.py  test_type_and_recent_properties.py
tests/unit/: _init_.py  test_repository_coverage.py  test_routes_coverage.py  test_services_coverage.py  test_transaction_service.py
transaction_api/: __init__.py  app_context.py  config.py  exceptions.py  logging_config.py  main.py  models.py  pagination.py  repository.py
transaction_api/routes/: __init__.py  customer_roures.py  customer_routes.py  fraud_routes.py  statistics_routes.py  system_routes.py  transaction_routes.py
transaction_api/services/: __init__.py  customer_service.py  fraud_service.py  health_service.py  statistics_service.py  transaction_service.py
